# AIProjClaude

./: .gitignore
Unreal/: Nanite_Architecture_Analysis.md
Unreal/.claude/: settings.local.json
Unreal/nanite_demo/: CMakeLists.txt  conversation_history.md
Unreal/nanite_demo/src/: main.cpp
Unreal/nanite_demo/src/core/: mesh_loader.cpp  mesh_loader.h  types.h
Unreal/nanite_demo/src/glad/: glad.c
Unreal/nanite_demo/src/glad/include/KHR/: khrplatform.h
Unreal/nanite_demo/src/glad/include/glad/: glad.h
Unreal/nanite_demo/src/render/: camera.cpp  camera.h  display.cpp  display.h
Unreal/nanite_demo/src/runtime/: dag_traversal.cpp  dag_traversal.h  packed_view.cpp  packed_view.h  rasterizer.cpp  rasterizer.h
Unreal/nanite_demo/tools/: gen_sphere.py
Unreal/notes/: ue-containers-analysis.md  ue-core-mechanisms-analysis.md  ue-core-module-analysis.md  ue-core-public-analysis.md
